# tfmini_temp

./: .gitignore  CMakeLists.txt  Untitled9.ipynb  model.tflite  posture_classification_model.py  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  first.cpp  main.c  model.cc  model.h  model_data.h
